--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             Moqups Images</a>
          </li>
          <li>
-            <a href="insert_your_url_for_this_exercise">
+            <a href="http://c7202632.thebritishcollege.org/">
                Zero to deployment (local server)</a>
          </li>
          <li>
